posicionamento da logo e do menu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="./images/logo-loja.png" alt="Logomarca da Loja Fábrica dos Brindes" title="Fábrica dos Brindes">
+                <img src="./images/logo-loja.png" alt="Logomarca da loja Fábrica dos Brindes" title="Fábrica dos Brindes">
             </div>
             <nav>
                 <ul>
